<resources>
    <string name="app_name">Inmobiliaria</string>
    <string name="entrar">Ingresar</string>
    <string name="correo_hint">Ingrese Correo</string>
    <string name="pass_hint">Ingrese Contraseña</string>
    <string name="title_activity_principal">Principal</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Perfil</string>
    <string name="menu_gallery">Propiedades</string>
    <string name="menu_inquilino">Inquilinos</string>
    <string name="menu_pago">Pagos</string>
    <string name="menu_contrato">Contratos</string>
    <string name="menu_salir">Cerrar sesión</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
